Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47013

qservicelocator.h:85:26: error: comma at end of enumerator list

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • None
    • 5.5.0
    • Qt3D
    • None
    • 12.04.3 LTS (GNU/Linux 3.8.0-44-generic i686) - gcc 4.6.3.
    • 454356fb663329bc075398196548472aa0c93b78

      The ServiceType enum line 78 of qservicelocator does have a coma at the end of the enumerator list.

      This cause a build error on gcc 4.6.3.

      I've just remove the coma to get it work.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            seanharmer Sean Harmer
            mokat Timothée BEHETY
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes