Remove trailing comma in enum

Task-number: QTBUG-47013
Change-Id: Ia22bc411b3c678f1035d5c1b78a9f0d1803ea935
Reviewed-by: Paul Lemire <paul.lemire@kdab.com>