src/core/services/qservicelocator.h
@@ -82,7 +82,7 @@ public:
 #if !defined(Q_QDOC)
         DefaultServiceCount, // Add additional default services before here
 #endif
-        UserService = 256,
+        UserService = 256
     };
 
     void registerServiceProvider(int serviceType, QAbstractServiceProvider *provider);
